combine both parts

--- a/test_config.xml.tmpl
+++ b/test_config.xml.tmpl
@@ -1,12 +1,12 @@
 <component name="ProjectRunConfigurationManager">
-  <configuration default="false" name="__YEAR__-__DAY__ __PART__ test" type="GoTestRunConfiguration" folderName="__YEAR__">
+  <configuration default="false" name="__YEAR__-__DAY__ test" type="GoTestRunConfiguration" folderName="__YEAR__">
     <module name="aoc23" />
-    <working_directory value="$PROJECT_DIR$/__YEAR__/day__DAY__/__PART__" />
+    <working_directory value="$PROJECT_DIR$/__YEAR__/day__DAY__" />
     <root_directory value="$PROJECT_DIR$" />
     <kind value="FILE" />
-    <package value="github.com/asymmetricia/aoc23/__YEAR__/day__DAY__/__PART__" />
+    <package value="github.com/asymmetricia/aoc23/__YEAR__/day__DAY__" />
     <directory value="$PROJECT_DIR$" />
-    <filePath value="$PROJECT_DIR$/__YEAR__/day__DAY__/__PART__/main_test.go" />
+    <filePath value="$PROJECT_DIR$/__YEAR__/day__DAY__/main_test.go" />
     <framework value="gotest" />
     <method v="2" />
   </configuration>
