--- a/template.go.tmpl
+++ b/template.go.tmpl
@@ -21,7 +21,7 @@ func solutionA(input []byte) int {
 	for _, line := range lines {
 		uniq[line] = true
 	}
-	log.Printf("read %d %s lines (%d unique)", len(lines), name, len(uniq))
+	log.Printf("read %d lines (%d unique)", len(lines), len(uniq))
 
 	//for _, line := range lines {
 	//	//fields := strings.Fields(line)
